# horrible-rust

./: .gitignore  Cargo.toml  main.db-journal
src/: main.rs  persistence.rs  ui.rs
