[package]
name = "horrible-rust"
version = "0.1.0"
authors = ["snow <evaldas.tyla@gmail.com>"]
edition = "2018"

[dependencies]
rss = { version = "*", features = ["from_url"] }
rusqlite = { version = "*", features = ["bundled"] }
kuchiki = "0.7.2"
reqwest = "0.9.9"
failure = "0.1.5"
regex = "1"
dialoguer = "0.3.0"
console = "0.7.5"
toml = "0.4.10"
serde = "1.0.87"
serde_derive = "1.0.87"